--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,3 +18,10 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        
+  auto-approve:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: hmarr/auto-approve-action@v2.0.0
+      with:
+        github-token: "${{ secrets.GITHUB_TOKEN }}"
